--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>hello</h1>
-testing git push
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>hello</h1>
+    <p>testing git push</p>
+  </body>
+ </html>
