--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <h1>hello</h1>
     <p>testing git push</p>
     <img src="images/whale.jpg">
+    </p>
+    <a href="about.html">About this project</a>
   </body>
  </html>
