--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
   <body>
     <h1>About</h1>
     <p>
-      This site is a <strong>sample project</strong> for the <em>Git
-      tutorial </em>.
+      This site is for <strong>Git sample</strong>.
     </p>
   </body>
 </html>
